@@ -34,7 +34,9 @@ class ezcDocumentDocbookToRstFootnoteHandler extends ezcDocumentDocbookToRstBase
      */
     public function handle( ezcDocumentElementVisitorConverter $converter, DOMElement $node, $root )
     {
+        $converter->setSkipPostDecoration( true );
         $footnoteContent = trim( $converter->visitChildren( $node, '' ) );
+        $converter->setSkipPostDecoration( false );
         $number = $converter->appendFootnote( $footnoteContent );
 
         // Add autonumbered footnote reference
